<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProducts">

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/add_product_image"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/prod_add"
        android:cropToPadding="true"

        android:scaleType="centerCrop"

        android:src="@drawable/add_photo" />

    <EditText
        android:id="@+id/add_product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/add_product_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_bg"
        android:hint="@string/prod_name"
        android:inputType="text"
        android:textSize="20sp"
        android:padding="10dp"/>


    <EditText
        android:id="@+id/add_product_description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/add_product_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_bg"
        android:hint="@string/prod_description"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/add_product_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/add_product_description"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_bg"
        android:hint="@string/prod_price"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@drawable/button_box_purple"
        android:text="@string/prod_add"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:onClick="SaveProduct"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"/>
    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/add_product_price"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_bg"
        android:hint="@string/category_name"
        android:inputType="text"
        android:textSize="20sp" />

</RelativeLayout>
</ScrollView>